# rsrag

./: .gitignore  Cargo.toml  README.md
src/: api.rs  config.rs  main.rs
src/engine/: llama.rs  mod.rs  qdrant.rs  session.vim
src/rsragger/: main.rs
