[package]
name = "rsrag"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rsragger"
path = "src/rsragger/main.rs"

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.8", features = ["macros"] }
config = { version = "0.15.22", features = ["toml"] }
futures-util = "0.3.32"
http = "1.4.0"
log = "0.4.29"
qdrant-client = { version = "1.17.0", features = ["uuid"] }
reqwest = { version = "0.13.2", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simple-logging = "2.0.2"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.23.0", features = ["v4", "v7"] }
